--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.log-box {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 30px;
+  margin-top: 25px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: darkgrey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button-gr{
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.log-text{
+  color: red;
+  margin: 10px;
 }
