--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+/*
+    Nikita Vinnik 312535529
+    Bar Salem 207351784
+    Netanel Aharoni 312541576
+*/
+
 .log-box {
   width: 100%;
   height: 30px;
