--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 
 .log-box {
   width: 100%;
-  height: 30px;
+  min-height: 30px;
+  padding-left:0.4em;
   margin-bottom: 30px;
   margin-top: 25px;
   border-style: solid;
@@ -21,5 +22,4 @@
 
 .log-text{
   color: red;
-  margin: 10px;
 }
